--- a/Rules/Provider/Microsoft.yaml
+++ b/Rules/Provider/Microsoft.yaml
@@ -1,5 +1,5 @@
 payload: 
-  - #DOMAIN-SUFFIX,aria.microsoft.com
+  # - DOMAIN-SUFFIX,aria.microsoft.com
   - DOMAIN-KEYWORD,1drv
   - DOMAIN-KEYWORD,1drv
   - DOMAIN-KEYWORD,microsoft
