--- a/Rules/Provider/Proxy.yaml
+++ b/Rules/Provider/Proxy.yaml
@@ -1,44 +1,35 @@
 payload: 
-  # > Line
-  - DOMAIN-SUFFIX,lin.ee
-  - DOMAIN-SUFFIX,line.me
-  - DOMAIN-SUFFIX,line.naver.jp
-  - DOMAIN-SUFFIX,line-apps.com
-  - DOMAIN-SUFFIX,line-cdn.net
-  - DOMAIN-SUFFIX,line-scdn.net
-  - DOMAIN-SUFFIX,nhncorp.jp
-
-  # > Riot Games
-  - DOMAIN-SUFFIX,riotcdn.net
-  - DOMAIN-SUFFIX,wr.pvp.net
-  - DOMAIN-SUFFIX,riotgames.com
-
-  # > Spark
-  - DOMAIN-SUFFIX,api.amplitude.com
-  - DOMAIN-SUFFIX,app.smartmailcloud.com
-  - DOMAIN-SUFFIX,gate.hockeyapp.net
-  - DOMAIN-SUFFIX,smartmailcloud.com
-  
-  # > Tesla
+  - DOMAIN-KEYWORD,appledaily
+  - DOMAIN-KEYWORD,beetalk
+  - DOMAIN-KEYWORD,blogspot
+  - DOMAIN-KEYWORD,dlercloud
+  - DOMAIN-KEYWORD,dropbox
+  - DOMAIN-KEYWORD,facebook
+  - DOMAIN-KEYWORD,github
+  - DOMAIN-KEYWORD,google
+  - DOMAIN-KEYWORD,instagram
+  - DOMAIN-KEYWORD,jetbrains
+  - DOMAIN-KEYWORD,marshmallow-qa.com
   - DOMAIN-KEYWORD,tesla
-
-  # > Zooba
-  # - User-Agent,battleroyale*
-
-  # > Top blocked sites
+  - DOMAIN-KEYWORD,twitter
+  - DOMAIN-KEYWORD,whatsapp
+  - DOMAIN-SUFFIX,1e100.net
+  - DOMAIN-SUFFIX,2mdn.net
   - DOMAIN-SUFFIX,2o7.net
   - DOMAIN-SUFFIX,4everProxy.com
   - DOMAIN-SUFFIX,4shared.com
   - DOMAIN-SUFFIX,4sqi.net
   - DOMAIN-SUFFIX,9to5mac.com
+  - DOMAIN-SUFFIX,abc.xyz
   - DOMAIN-SUFFIX,abpchina.org
   - DOMAIN-SUFFIX,accountkit.com
   - DOMAIN-SUFFIX,adblockplus.org
   - DOMAIN-SUFFIX,adobe.com
   - DOMAIN-SUFFIX,adobedtm.com
   - DOMAIN-SUFFIX,aerisapi.com
-  - DOMAIN-SUFFIX,akamaihd.net
   - DOMAIN-SUFFIX,airtable.com
+  - DOMAIN-SUFFIX,akamai.net
+  - DOMAIN-SUFFIX,akamaihd.net
   - DOMAIN-SUFFIX,alfredapp.com
   - DOMAIN-SUFFIX,allconnected.co
   - DOMAIN-SUFFIX,amazon.co
@@ -50,14 +41,15 @@ payload:
   - DOMAIN-SUFFIX,ampproject.org
   - DOMAIN-SUFFIX,anaconda.com
   - DOMAIN-SUFFIX,ancsconf.org
+  - DOMAIN-SUFFIX,android-x86.org
   - DOMAIN-SUFFIX,android.com
   - DOMAIN-SUFFIX,androidify.com
-  - DOMAIN-SUFFIX,android-x86.org
   - DOMAIN-SUFFIX,angularjs.org
   - DOMAIN-SUFFIX,anthonycalzadilla.com
   - DOMAIN-SUFFIX,aol.com
   - DOMAIN-SUFFIX,aolcdn.com
   - DOMAIN-SUFFIX,apache.org
+  - DOMAIN-SUFFIX,api.amplitude.com
   - DOMAIN-SUFFIX,api.mixpanel.com
   - DOMAIN-SUFFIX,api.termius.com
   - DOMAIN-SUFFIX,api.tiktokv.com
@@ -65,10 +57,12 @@ payload:
   - DOMAIN-SUFFIX,apigee.com
   - DOMAIN-SUFFIX,apk-dl.com
   - DOMAIN-SUFFIX,apkpure.com
+  - DOMAIN-SUFFIX,app-measurement.com
+  - DOMAIN-SUFFIX,app.smartmailcloud.com
   - DOMAIN-SUFFIX,appdownloader.net
   - DOMAIN-SUFFIX,apple-dns.net
-  - DOMAIN-SUFFIX,app-measurement.com
   - DOMAIN-SUFFIX,appshopper.com
+  - DOMAIN-SUFFIX,appspot.com
   - DOMAIN-SUFFIX,arcgis.com
   - DOMAIN-SUFFIX,archive.is
   - DOMAIN-SUFFIX,archive.org
@@ -77,6 +71,7 @@ payload:
   - DOMAIN-SUFFIX,aspnetcdn.com
   - DOMAIN-SUFFIX,async.be
   - DOMAIN-SUFFIX,att.com
+  - DOMAIN-SUFFIX,autodraw.com
   - DOMAIN-SUFFIX,avgle.com
   - DOMAIN-SUFFIX,awsstatic.com
   - DOMAIN-SUFFIX,azure.com
@@ -84,6 +79,7 @@ payload:
   - DOMAIN-SUFFIX,azurewebsites.net
   - DOMAIN-SUFFIX,badoo.com
   - DOMAIN-SUFFIX,bandisoft.com
+  - DOMAIN-SUFFIX,bandwagonhost.com
   - DOMAIN-SUFFIX,bbtoystore.com
   - DOMAIN-SUFFIX,betvictor.com
   - DOMAIN-SUFFIX,bigsound.org
@@ -98,6 +94,7 @@ payload:
   - DOMAIN-SUFFIX,bitshare.com
   - DOMAIN-SUFFIX,bkrtx.com
   - DOMAIN-SUFFIX,blog.com
+  - DOMAIN-SUFFIX,blogblog.com
   - DOMAIN-SUFFIX,blogcdn.com
   - DOMAIN-SUFFIX,blogger.com
   - DOMAIN-SUFFIX,bloglovin.com
@@ -123,6 +120,7 @@ payload:
   - DOMAIN-SUFFIX,chinatimes.com
   - DOMAIN-SUFFIX,chrome.com
   - DOMAIN-SUFFIX,chromecast.com
+  - DOMAIN-SUFFIX,chromeexperiments.com
   - DOMAIN-SUFFIX,chromercise.com
   - DOMAIN-SUFFIX,chromestatus.com
   - DOMAIN-SUFFIX,chromium.org
@@ -138,12 +136,16 @@ payload:
   - DOMAIN-SUFFIX,cocoapods.org
   - DOMAIN-SUFFIX,comodoca.com
   - DOMAIN-SUFFIX,content.office.net
+  - DOMAIN-SUFFIX,creativelab5.com
   - DOMAIN-SUFFIX,crisp.chat
+  - DOMAIN-SUFFIX,crittercism.com
+  - DOMAIN-SUFFIX,culturalspot.org
   - DOMAIN-SUFFIX,culturedcode.com
   - DOMAIN-SUFFIX,cygames.jp
   - DOMAIN-SUFFIX,d.pr
   - DOMAIN-SUFFIX,danilo.to
   - DOMAIN-SUFFIX,daolan.net
+  - DOMAIN-SUFFIX,dartlang.org
   - DOMAIN-SUFFIX,data-vocabulary.org
   - DOMAIN-SUFFIX,dayone.me
   - DOMAIN-SUFFIX,db.tt
@@ -167,6 +169,7 @@ payload:
   - DOMAIN-SUFFIX,duckduckgo.com
   - DOMAIN-SUFFIX,dueapp.com
   - DOMAIN-SUFFIX,dw.com
+  - DOMAIN-SUFFIX,e-hentai.org
   - DOMAIN-SUFFIX,easybib.com
   - DOMAIN-SUFFIX,economist.com
   - DOMAIN-SUFFIX,edgecastcdn.net
@@ -176,11 +179,16 @@ payload:
   - DOMAIN-SUFFIX,entrust.net
   - DOMAIN-SUFFIX,eurekavpt.com
   - DOMAIN-SUFFIX,evernote.com
+  - DOMAIN-SUFFIX,exhentai.org
   - DOMAIN-SUFFIX,extmatrix.com
   - DOMAIN-SUFFIX,eyny.com
   - DOMAIN-SUFFIX,fabric.io
   - DOMAIN-SUFFIX,fastly.net
   - DOMAIN-SUFFIX,fastmail.com
+  - DOMAIN-SUFFIX,fb.com
+  - DOMAIN-SUFFIX,fb.me
+  - DOMAIN-SUFFIX,fbcdn.net
+  - DOMAIN-SUFFIX,fbsbx.com
   - DOMAIN-SUFFIX,fc2.com
   - DOMAIN-SUFFIX,feedburner.com
   - DOMAIN-SUFFIX,feedly.com
@@ -200,6 +208,8 @@ payload:
   - DOMAIN-SUFFIX,g.co
   - DOMAIN-SUFFIX,gabia.net
   - DOMAIN-SUFFIX,garena.com
+  - DOMAIN-SUFFIX,gate.hockeyapp.net
+  - DOMAIN-SUFFIX,gcr.io
   - DOMAIN-SUFFIX,geni.us
   - DOMAIN-SUFFIX,get.how
   - DOMAIN-SUFFIX,getcloudapp.com
@@ -214,6 +224,7 @@ payload:
   - DOMAIN-SUFFIX,git.io
   - DOMAIN-SUFFIX,gitbook.com
   - DOMAIN-SUFFIX,globalsign.com
+  - DOMAIN-SUFFIX,gmail.com
   - DOMAIN-SUFFIX,gmocloud.com
   - DOMAIN-SUFFIX,gmodules.com
   - DOMAIN-SUFFIX,go.com
@@ -224,18 +235,23 @@ payload:
   - DOMAIN-SUFFIX,goo.gl
   - DOMAIN-SUFFIX,goodreaders.com
   - DOMAIN-SUFFIX,goodreads.com
+  - DOMAIN-SUFFIX,gosetsuden.jp
   - DOMAIN-SUFFIX,gravatar.com
   - DOMAIN-SUFFIX,gstatic.cn
   - DOMAIN-SUFFIX,gstatic.com
   - DOMAIN-SUFFIX,gunsamerica.com
   - DOMAIN-SUFFIX,gvt0.com
   - DOMAIN-SUFFIX,gvt1.com
+  - DOMAIN-SUFFIX,gwtproject.org
+  - DOMAIN-SUFFIX,hackmd.io
   - DOMAIN-SUFFIX,helpshift.com
+  - DOMAIN-SUFFIX,heroku.com
   - DOMAIN-SUFFIX,hitun.io
   - DOMAIN-SUFFIX,hockeyapp.net
   - DOMAIN-SUFFIX,homedepot.com
   - DOMAIN-SUFFIX,hootsuite.com
   - DOMAIN-SUFFIX,howtoforge.com
+  - DOMAIN-SUFFIX,html5rocks.com
   - DOMAIN-SUFFIX,i-cable.com
   - DOMAIN-SUFFIX,iam.soy
   - DOMAIN-SUFFIX,icoco.com
@@ -272,8 +288,11 @@ payload:
   - DOMAIN-SUFFIX,kakaocdn.net
   - DOMAIN-SUFFIX,kat.cr
   - DOMAIN-SUFFIX,kenengba.com
+  - DOMAIN-SUFFIX,keyhole.com
   - DOMAIN-SUFFIX,kik.com
   - DOMAIN-SUFFIX,klip.me
+  - DOMAIN-SUFFIX,kobo.com
+  - DOMAIN-SUFFIX,kobobooks.com
   - DOMAIN-SUFFIX,leancloud.com
   - DOMAIN-SUFFIX,leetcode.com
   - DOMAIN-SUFFIX,lhie1.com
@@ -281,6 +300,12 @@ payload:
   - DOMAIN-SUFFIX,licdn.com
   - DOMAIN-SUFFIX,lightboxcdn.com
   - DOMAIN-SUFFIX,like.com
+  - DOMAIN-SUFFIX,lin.ee
+  - DOMAIN-SUFFIX,line-apps.com
+  - DOMAIN-SUFFIX,line-cdn.net
+  - DOMAIN-SUFFIX,line-scdn.net
+  - DOMAIN-SUFFIX,line.me
+  - DOMAIN-SUFFIX,line.naver.jp
   - DOMAIN-SUFFIX,linkedin.com
   - DOMAIN-SUFFIX,linode.com
   - DOMAIN-SUFFIX,lithium.com
@@ -292,16 +317,20 @@ payload:
   - DOMAIN-SUFFIX,macid.co
   - DOMAIN-SUFFIX,macromedia.com
   - DOMAIN-SUFFIX,macrumors.com
+  - DOMAIN-SUFFIX,madewithcode.com
   - DOMAIN-SUFFIX,mangaup.jp
   - DOMAIN-SUFFIX,manhuaren.com
   - DOMAIN-SUFFIX,marketwatch.com
   - DOMAIN-SUFFIX,mashable.com
+  - DOMAIN-SUFFIX,material.io
   - DOMAIN-SUFFIX,mathjax.org
+  - DOMAIN-SUFFIX,maven.apache.org
   - DOMAIN-SUFFIX,maven.org
   - DOMAIN-SUFFIX,medium.com
   - DOMAIN-SUFFIX,mega.co.nz
   - DOMAIN-SUFFIX,mega.nz
   - DOMAIN-SUFFIX,megaupload.com
+  - DOMAIN-SUFFIX,messenger.com
   - DOMAIN-SUFFIX,microsofttranslator.com
   - DOMAIN-SUFFIX,mindnode.com
   - DOMAIN-SUFFIX,mlssoccer.com
@@ -310,14 +339,18 @@ payload:
   - DOMAIN-SUFFIX,moves-export.com
   - DOMAIN-SUFFIX,mp3buscador.com
   - DOMAIN-SUFFIX,msedge.net
+  - DOMAIN-SUFFIX,mvnrepository.com
   - DOMAIN-SUFFIX,mycnnews.com
   - DOMAIN-SUFFIX,myfontastic.com
   - DOMAIN-SUFFIX,name.com
   - DOMAIN-SUFFIX,nasa.gov
   - DOMAIN-SUFFIX,ndr.de
   - DOMAIN-SUFFIX,netdna-cdn.com
+  - DOMAIN-SUFFIX,netmarble.com
   - DOMAIN-SUFFIX,newipnow.com
   - DOMAIN-SUFFIX,nextmedia.com
+  - DOMAIN-SUFFIX,nhncorp.jp
+  - DOMAIN-SUFFIX,nianticlabs.com
   - DOMAIN-SUFFIX,nicovideo.jp
   - DOMAIN-SUFFIX,nih.gov
   - DOMAIN-SUFFIX,nimg.jp
@@ -356,6 +389,7 @@ payload:
   - DOMAIN-SUFFIX,picasaweb.com
   - DOMAIN-SUFFIX,pinboard.in
   - DOMAIN-SUFFIX,ping.pe
+  - DOMAIN-SUFFIX,pinimg.com
   - DOMAIN-SUFFIX,pinterest.com
   - DOMAIN-SUFFIX,pixelmator.com
   - DOMAIN-SUFFIX,pixiv.net
@@ -365,12 +399,11 @@ payload:
   - DOMAIN-SUFFIX,polymer-project.org
   - DOMAIN-SUFFIX,popo.tw
   - DOMAIN-SUFFIX,potato.im
-  - DOMAIN-SUFFIX,redd.it
-  - DOMAIN-SUFFIX,rthk.hk
   - DOMAIN-SUFFIX,prfct.co
   - DOMAIN-SUFFIX,proxfree.com
   - DOMAIN-SUFFIX,psiphon3.com
   - DOMAIN-SUFFIX,ptt.cc
+  - DOMAIN-SUFFIX,pubnub.com
   - DOMAIN-SUFFIX,pubu.com.tw
   - DOMAIN-SUFFIX,puffinbrowser.com
   - DOMAIN-SUFFIX,pushbullet.com
@@ -381,13 +414,18 @@ payload:
   - DOMAIN-SUFFIX,readingtimes.com.tw
   - DOMAIN-SUFFIX,readmoo.com
   - DOMAIN-SUFFIX,recaptcha.net
+  - DOMAIN-SUFFIX,redd.it
   - DOMAIN-SUFFIX,reddit.com
   - DOMAIN-SUFFIX,redditmedia.com
   - DOMAIN-SUFFIX,reuters.com
   - DOMAIN-SUFFIX,rfi.fr
   - DOMAIN-SUFFIX,rileyguide.com
   - DOMAIN-SUFFIX,rime.im
+  - DOMAIN-SUFFIX,riotcdn.net
+  - DOMAIN-SUFFIX,riotgames.com
   - DOMAIN-SUFFIX,rsf.org
+  - DOMAIN-SUFFIX,rthk.hk
+  - DOMAIN-SUFFIX,scdn.co
   - DOMAIN-SUFFIX,sciencedaily.com
   - DOMAIN-SUFFIX,sciencemag.org
   - DOMAIN-SUFFIX,scribd.com
@@ -404,11 +442,12 @@ payload:
   - DOMAIN-SUFFIX,simp.ly
   - DOMAIN-SUFFIX,simplenote.com
   - DOMAIN-SUFFIX,sketchappsources.com
-  - DOMAIN-SUFFIX,slack.com
   - DOMAIN-SUFFIX,slack-edge.com
   - DOMAIN-SUFFIX,slack-msgs.com
+  - DOMAIN-SUFFIX,slack.com
   - DOMAIN-SUFFIX,slideshare.net
   - DOMAIN-SUFFIX,smartdnsproxy.com
+  - DOMAIN-SUFFIX,smartmailcloud.com
   - DOMAIN-SUFFIX,smh.com.au
   - DOMAIN-SUFFIX,snapchat.com
   - DOMAIN-SUFFIX,sndcdn.com
@@ -438,6 +477,7 @@ payload:
   - DOMAIN-SUFFIX,symauth.com
   - DOMAIN-SUFFIX,symcb.com
   - DOMAIN-SUFFIX,symcd.com
+  - DOMAIN-SUFFIX,t.co
   - DOMAIN-SUFFIX,t66y.com
   - DOMAIN-SUFFIX,tablesgenerator.com
   - DOMAIN-SUFFIX,tabtter.jp
@@ -451,6 +491,7 @@ payload:
   - DOMAIN-SUFFIX,technorati.com
   - DOMAIN-SUFFIX,techsmith.com
   - DOMAIN-SUFFIX,teddysun.com
+  - DOMAIN-SUFFIX,tensorflow.org
   - DOMAIN-SUFFIX,textnow.me
   - DOMAIN-SUFFIX,thebobs.com
   - DOMAIN-SUFFIX,theinitium.com
@@ -467,9 +508,11 @@ payload:
   - DOMAIN-SUFFIX,tmblr.co
   - DOMAIN-SUFFIX,todoist.com
   - DOMAIN-SUFFIX,togetter.com
+  - DOMAIN-SUFFIX,toggleable.com
   - DOMAIN-SUFFIX,tokyocn.com
   - DOMAIN-SUFFIX,tomshardware.com
   - DOMAIN-SUFFIX,torcn.com
+  - DOMAIN-SUFFIX,torproject.org
   - DOMAIN-SUFFIX,torrentprivacy.com
   - DOMAIN-SUFFIX,torrentproject.se
   - DOMAIN-SUFFIX,torrentz.eu
@@ -490,7 +533,9 @@ payload:
   - DOMAIN-SUFFIX,tweetdeck.com
   - DOMAIN-SUFFIX,tweetmarker.net
   - DOMAIN-SUFFIX,twimg.co
+  - DOMAIN-SUFFIX,twimg.com
   - DOMAIN-SUFFIX,twitch.tv
+  - DOMAIN-SUFFIX,twitpic.com
   - DOMAIN-SUFFIX,twitthat.com
   - DOMAIN-SUFFIX,twtkr.com
   - DOMAIN-SUFFIX,twttr.com
@@ -508,6 +553,7 @@ payload:
   - DOMAIN-SUFFIX,ulyssesapp.com
   - DOMAIN-SUFFIX,unblockdmm.com
   - DOMAIN-SUFFIX,unblocksites.co
+  - DOMAIN-SUFFIX,unfiltered.news
   - DOMAIN-SUFFIX,unpo.org
   - DOMAIN-SUFFIX,unsplash.com
   - DOMAIN-SUFFIX,untraceable.us
@@ -524,6 +570,7 @@ payload:
   - DOMAIN-SUFFIX,ustream.tv
   - DOMAIN-SUFFIX,v.gd
   - DOMAIN-SUFFIX,v2ex.co
+  - DOMAIN-SUFFIX,v2ex.com
   - DOMAIN-SUFFIX,v2ray.com
   - DOMAIN-SUFFIX,van001.com
   - DOMAIN-SUFFIX,vanpeople.com
@@ -556,9 +603,12 @@ payload:
   - DOMAIN-SUFFIX,w.org
   - DOMAIN-SUFFIX,w3schools.com
   - DOMAIN-SUFFIX,wattpad.com
+  - DOMAIN-SUFFIX,waveprotocol.org
   - DOMAIN-SUFFIX,web2project.net
   - DOMAIN-SUFFIX,webfreer.com
   - DOMAIN-SUFFIX,weblagu.com
+  - DOMAIN-SUFFIX,webmproject.org
+  - DOMAIN-SUFFIX,webrtc.org
   - DOMAIN-SUFFIX,websnapr.com
   - DOMAIN-SUFFIX,webtype.com
   - DOMAIN-SUFFIX,webwarper.net
@@ -566,13 +616,14 @@ payload:
   - DOMAIN-SUFFIX,westca.com
   - DOMAIN-SUFFIX,westpoint.edu
   - DOMAIN-SUFFIX,whatbrowser.org
-  - DOMAIN-SUFFIX,wikiwand.com
+  - DOMAIN-SUFFIX,wikawika.xyz
+  - DOMAIN-SUFFIX,wikileaks-forum.com
   - DOMAIN-SUFFIX,wikileaks.info
   - DOMAIN-SUFFIX,wikileaks.org
-  - DOMAIN-SUFFIX,wikileaks-forum.com
   - DOMAIN-SUFFIX,wikimedia.org
   - DOMAIN-SUFFIX,wikipedia.com
   - DOMAIN-SUFFIX,wikipedia.org
+  - DOMAIN-SUFFIX,wikiwand.com
   - DOMAIN-SUFFIX,wn.com
   - DOMAIN-SUFFIX,wordpress.com
   - DOMAIN-SUFFIX,workflow.is
@@ -580,6 +631,7 @@ payload:
   - DOMAIN-SUFFIX,worldcat.org
   - DOMAIN-SUFFIX,wow.com
   - DOMAIN-SUFFIX,wp.com
+  - DOMAIN-SUFFIX,wr.pvp.net
   - DOMAIN-SUFFIX,wsj.com
   - DOMAIN-SUFFIX,wsj.net
   - DOMAIN-SUFFIX,wwitv.com
@@ -597,8 +649,8 @@ payload:
   - DOMAIN-SUFFIX,yastatic.net
   - DOMAIN-SUFFIX,ycombinator.com
   - DOMAIN-SUFFIX,yeeyi.com
-  - DOMAIN-SUFFIX,yesasia.com
   - DOMAIN-SUFFIX,yes-news.com
+  - DOMAIN-SUFFIX,yesasia.com
   - DOMAIN-SUFFIX,yidio.com
   - DOMAIN-SUFFIX,yimg.com
   - DOMAIN-SUFFIX,ying.com
@@ -613,79 +665,50 @@ payload:
   - DOMAIN-SUFFIX,zaobao.com.sg
   - DOMAIN-SUFFIX,zeutch.com
   - DOMAIN-SUFFIX,zynamics.com
-
-  # > Force some domains which are fucked by GFW while resolving DNS,or do not respect the system Proxy
-  # - User-Agent,WhatsApp*
-
-  - DOMAIN-KEYWORD,appledaily
-  - DOMAIN-KEYWORD,beetalk
-  - DOMAIN-KEYWORD,blogspot
-  - DOMAIN-KEYWORD,dropbox
-  - DOMAIN-KEYWORD,facebook
-  - DOMAIN-KEYWORD,github
-  - DOMAIN-KEYWORD,instagram
-  - DOMAIN-KEYWORD,twitter
-  - DOMAIN-KEYWORD,whatsapp
-  - DOMAIN-KEYWORD,google
-  - DOMAIN-SUFFIX,1e100.net
-  - DOMAIN-SUFFIX,2mdn.net
-  - DOMAIN-SUFFIX,abc.xyz
-  - DOMAIN-SUFFIX,akamai.net
-  - DOMAIN-SUFFIX,appspot.com
-  - DOMAIN-SUFFIX,autodraw.com
-  - DOMAIN-SUFFIX,bandwagonhost.com
-  - DOMAIN-SUFFIX,blogblog.com
-  - DOMAIN-SUFFIX,chromeexperiments.com
-  - DOMAIN-SUFFIX,creativelab5.com
-  - DOMAIN-SUFFIX,crittercism.com
-  - DOMAIN-SUFFIX,culturalspot.org
-  - DOMAIN-SUFFIX,dartlang.org
-  - DOMAIN-SUFFIX,fb.com
-  - DOMAIN-SUFFIX,fb.me
-  - DOMAIN-SUFFIX,fbcdn.net
-  - DOMAIN-SUFFIX,fbsbx.com
-  - DOMAIN-SUFFIX,gcr.io
-  - DOMAIN-SUFFIX,gmail.com
-  - DOMAIN-SUFFIX,gosetsuden.jp
-  - DOMAIN-SUFFIX,gwtproject.org
-  - DOMAIN-SUFFIX,hackmd.io
-  - DOMAIN-SUFFIX,heroku.com
-  - DOMAIN-SUFFIX,html5rocks.com
-  - DOMAIN-SUFFIX,keyhole.com
-  - DOMAIN-SUFFIX,kobo.com
-  - DOMAIN-SUFFIX,kobobooks.com
-  - DOMAIN-SUFFIX,madewithcode.com
-  - DOMAIN-SUFFIX,material.io
-  - DOMAIN-SUFFIX,messenger.com
-  - DOMAIN-SUFFIX,netmarble.com
-  - DOMAIN-SUFFIX,nianticlabs.com
-  - DOMAIN-SUFFIX,pinimg.com
-  - DOMAIN-SUFFIX,pubnub.com
-  - DOMAIN-SUFFIX,scdn.co
-  - DOMAIN-SUFFIX,t.co
-  - DOMAIN-SUFFIX,tensorflow.org
-  - DOMAIN-SUFFIX,toggleable.com
-  - DOMAIN-SUFFIX,torproject.org
-  - DOMAIN-SUFFIX,twimg.com
-  - DOMAIN-SUFFIX,twitpic.com
-  - DOMAIN-SUFFIX,unfiltered.news
-  - DOMAIN-SUFFIX,waveprotocol.org
-  - DOMAIN-SUFFIX,webmproject.org
-  - DOMAIN-SUFFIX,webrtc.org
-
-  # > V2EX
-  - DOMAIN-SUFFIX,v2ex.com
-
-  - DOMAIN-KEYWORD,dlercloud
-
-  # > Amazon
+  - IP-CIDR,1.201.0.0/24,no-resolve
+  - IP-CIDR,103.2.28.0/22,no-resolve
+  - IP-CIDR,103.246.56.0/22,no-resolve
+  - IP-CIDR,103.27.148.0/22,no-resolve
+  - IP-CIDR,103.4.96.0/22,no-resolve
+  - IP-CIDR,110.76.140.0/22,no-resolve
+  - IP-CIDR,113.61.104.0/22,no-resolve
+  - IP-CIDR,119.235.224.0/21,no-resolve
+  - IP-CIDR,119.235.232.0/23,no-resolve
+  - IP-CIDR,119.235.235.0/24,no-resolve
+  - IP-CIDR,119.235.236.0/23,no-resolve
+  - IP-CIDR,125.209.208.0/20,no-resolve
+  - IP-CIDR,125.6.146.0/24,no-resolve
+  - IP-CIDR,125.6.149.0/24,no-resolve
+  - IP-CIDR,125.6.190.0/24,no-resolve
+  - IP-CIDR,129.134.0.0/17,no-resolve
+  - IP-CIDR,13.251.24.157/24,no-resolve
+  - IP-CIDR,13.251.41.203/24,no-resolve
   - IP-CIDR,13.32.0.0/16,no-resolve
   - IP-CIDR,13.33.0.0/16,no-resolve
   - IP-CIDR,13.35.0.0/17,no-resolve
+  - IP-CIDR,157.240.0.0/17,no-resolve
+  - IP-CIDR,17.252.156.147/24,no-resolve
+  - IP-CIDR,17.252.157.26/24,no-resolve
+  - IP-CIDR,173.194.0.0/16,no-resolve
+  - IP-CIDR,173.252.64.0/19,no-resolve
+  - IP-CIDR,173.252.96.0/19,no-resolve
+  - IP-CIDR,174.37.0.0/16,no-resolve
+  - IP-CIDR,179.60.192.0/22,no-resolve
   - IP-CIDR,18.184.0.0/15,no-resolve
   - IP-CIDR,18.194.0.0/15,no-resolve
   - IP-CIDR,18.208.0.0/13,no-resolve
   - IP-CIDR,18.232.0.0/14,no-resolve
+  - IP-CIDR,185.60.216.0/22,no-resolve
+  - IP-CIDR,203.104.103.0/24,no-resolve
+  - IP-CIDR,203.104.128.0/20,no-resolve
+  - IP-CIDR,203.174.66.64/26,no-resolve
+  - IP-CIDR,203.174.77.0/24,no-resolve
+  - IP-CIDR,204.15.20.0/22,no-resolve
+  - IP-CIDR,208.43.0.0/16,no-resolve
+  - IP-CIDR,27.0.236.0/22,no-resolve
+  - IP-CIDR,31.13.24.0/21,no-resolve
+  - IP-CIDR,31.13.64.0/18,no-resolve
+  - IP-CIDR,45.64.40.0/22,no-resolve
   - IP-CIDR,52.200.0.0/13,no-resolve
   - IP-CIDR,52.58.0.0/15,no-resolve
   - IP-CIDR,52.74.0.0/16,no-resolve
@@ -695,59 +718,10 @@ payload:
   - IP-CIDR,54.226.0.0/15,no-resolve
   - IP-CIDR,54.230.156.0/22,no-resolve
   - IP-CIDR,54.93.0.0/16,no-resolve
-
-  # > Facebook
-  - IP-CIDR,103.4.96.0/22,no-resolve
-  - IP-CIDR,129.134.0.0/17,no-resolve
-  - IP-CIDR,157.240.0.0/17,no-resolve
-  - IP-CIDR,173.252.64.0/19,no-resolve
-  - IP-CIDR,173.252.96.0/19,no-resolve
-  - IP-CIDR,179.60.192.0/22,no-resolve
-  - IP-CIDR,185.60.216.0/22,no-resolve
-  - IP-CIDR,204.15.20.0/22,no-resolve
-  - IP-CIDR,31.13.24.0/21,no-resolve
-  - IP-CIDR,31.13.64.0/18,no-resolve
-  - IP-CIDR,45.64.40.0/22,no-resolve
   - IP-CIDR,66.220.144.0/20,no-resolve
   - IP-CIDR,69.171.224.0/19,no-resolve
   - IP-CIDR,69.63.176.0/20,no-resolve
   - IP-CIDR,74.119.76.0/22,no-resolve
-
-  # > Google
-  - IP-CIDR,173.194.0.0/16,no-resolve
   - IP-CIDR,74.125.0.0/16,no-resolve
-
-  # > Kakao Talk
-  - IP-CIDR,1.201.0.0/24,no-resolve
-  - IP-CIDR,103.246.56.0/22,no-resolve
-  - IP-CIDR,103.27.148.0/22,no-resolve
-  - IP-CIDR,110.76.140.0/22,no-resolve
-  - IP-CIDR,113.61.104.0/22,no-resolve
-  - IP-CIDR,27.0.236.0/22,no-resolve
-
-  # > LINE
-  - IP-CIDR,103.2.28.0/22,no-resolve
-  - IP-CIDR,119.235.224.0/21,no-resolve
-  - IP-CIDR,119.235.232.0/23,no-resolve
-  - IP-CIDR,119.235.235.0/24,no-resolve
-  - IP-CIDR,119.235.236.0/23,no-resolve
-  - IP-CIDR,125.6.146.0/24,no-resolve
-  - IP-CIDR,125.6.149.0/24,no-resolve
-  - IP-CIDR,125.6.190.0/24,no-resolve
-  - IP-CIDR,125.209.208.0/20,no-resolve
-  - IP-CIDR,203.104.103.0/24,no-resolve
-  - IP-CIDR,203.104.128.0/20,no-resolve
-  - IP-CIDR,203.174.66.64/26,no-resolve
-  - IP-CIDR,203.174.77.0/24,no-resolve
-
-  # > Potato Chat
-  - IP-CIDR,13.251.24.157/24,no-resolve
-  - IP-CIDR,13.251.41.203/24,no-resolve
-  - IP-CIDR,17.252.156.147/24,no-resolve
-  - IP-CIDR,17.252.157.26/24,no-resolve
-
-  # > SoftLayer
   - IP-CIDR,74.86.0.0/16,no-resolve
   - IP-CIDR,75.126.0.0/16,no-resolve
-  - IP-CIDR,174.37.0.0/16,no-resolve
-  - IP-CIDR,208.43.0.0/16,no-resolve
