--- a/Rules/Provider/Domestic IPs.yaml
+++ b/Rules/Provider/Domestic IPs.yaml
@@ -1,5 +1,5 @@
 payload: 
-  # - IP-CIDR,1.0.1.0/24
+  - IP-CIDR,1.0.1.0/24
   - IP-CIDR,1.0.2.0/23
   - IP-CIDR,1.0.32.0/19
   - IP-CIDR,1.0.8.0/21
