--- a/Rules/Provider/Media/AsianTV/Bilibili.yaml
+++ b/Rules/Provider/Media/AsianTV/Bilibili.yaml
@@ -15,3 +15,14 @@ payload:
   - DOMAIN-SUFFIX,im9.com
   - DOMAIN-SUFFIX,smtcdns.net
   - DOMAIN,upos-hz-mirrorakam.akamaized.net
+  - DOMAIN,upos-hz-mirrorakam.akamaized.net  
+  - IP-CIDR,119.29.29.29/32
+  - IP-CIDR,128.1.62.200/32
+  - IP-CIDR,128.1.62.201/32
+  - IP-CIDR,150.116.92.250/32
+  - IP-CIDR,164.52.76.18/32
+  - IP-CIDR,203.107.1.33/32
+  - IP-CIDR,203.107.1.34/32
+  - IP-CIDR,203.107.1.65/32
+  - IP-CIDR,203.107.1.66/32
+  - IP-CIDR,45.43.32.234/32
