--- a/Rules/Provider/Reject.yaml
+++ b/Rules/Provider/Reject.yaml
@@ -436,6 +436,7 @@ payload:
   - DOMAIN-SUFFIX,233fb5b59351.com
   - DOMAIN-SUFFIX,233wo.com
   - DOMAIN-SUFFIX,2345.cn
+  - DOMAIN-SUFFIX,2345.com
   - DOMAIN-SUFFIX,23456dj.com
   - DOMAIN-SUFFIX,2345api.dftoutiao.com
   - DOMAIN-SUFFIX,2345apicode.dftoutiao.com
