屏蔽部分软件园

--- a/Rules/Provider/Reject.yaml
+++ b/Rules/Provider/Reject.yaml
@@ -1,4 +1,15 @@
 payload: 
+  - DOMAIN-SUFFIX,cr173.com
+  - DOMAIN-SUFFIX,onlinedown.net
+  - DOMAIN-SUFFIX,downxia.com
+  - DOMAIN-SUFFIX,crsky.com
+  - DOMAIN-SUFFIX,skycn.com
+  - DOMAIN-SUFFIX,qh24.com
+  - DOMAIN-SUFFIX,33lc.com
+  - DOMAIN-SUFFIX,cncrk.com
+  - DOMAIN-SUFFIX,sd173.com
+  - DOMAIN-SUFFIX,it-china.com.cn
+  - DOMAIN-SUFFIX,ddsofts.com
   - DOMAIN-KEYWORD,admarvel
   - DOMAIN-KEYWORD,admaster
   - DOMAIN-KEYWORD,adsage
