--- a/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml
@@ -1,9 +1,9 @@
 payload: 
   - DOMAIN-KEYWORD,youtube
   - DOMAIN-SUFFIX,app-measurement.com
-  - DOMAIN-SUFFIX,googlevideo.com
   - DOMAIN-SUFFIX,gvt2.com
   - DOMAIN-SUFFIX,youtu.be
   - DOMAIN-SUFFIX,ytimg.com
+  - DOMAIN,googlevideo
   - DOMAIN,youtubei.googleapis.com
   - DOMAIN,yt3.ggpht.com
