--- a/Rules-Github/Rule.yaml
+++ b/Rules-Github/Rule.yaml
@@ -1,3 +1,4 @@
+rules: 
 - RULE-SET,Reject,AdBlock
 - RULE-SET,Special,DIRECT
 
@@ -41,11 +42,10 @@
 - RULE-SET,ViuTV,GlobalTV
 - RULE-SET,YouTube,GlobalTV
 
-
 - RULE-SET,Steam,SteamAndPayPal
-- RULE-SET,Speedtest,Speedtest
 - RULE-SET,PayPal,SteamAndPayPal
 
+- RULE-SET,Speedtest,Speedtest
 
 - RULE-SET,PROXY,Proxy
 - RULE-SET,Telegram,Proxy
@@ -107,14 +107,20 @@ script:
             "Spotify": "GlobalTV",
             "ViuTV": "GlobalTV",
             "YouTube": "GlobalTV",
+
             "Telegram": "Proxy",
-            "Steam": "SteamAndPayPal",
-            "Speedtest": "Speedtest",
-            "PayPal": "SteamAndPayPal",
-            "Microsoft": "AppleAndMicrosoft",
             "PROXY": "Proxy",
+
+            "Steam": "SteamAndPayPal",
+            "PayPal": "SteamAndPayPal",
+
+            "Speedtest": "Speedtest",
+
+            "Microsoft": "AppleAndMicrosoft",
             "Apple": "AppleAndMicrosoft",
+
             "Scholar": "Scholar",
+
             "Domestic": "Domestic",
             "Domestic IPs": "Domestic",
             "LAN": "DIRECT"
@@ -132,6 +138,8 @@ script:
         if code == "CN":
           return "Domestic"
         return "Others"
+
+
 rule-providers:
   Reject:
     type: http
@@ -175,42 +183,19 @@ rule-providers:
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/AsianTV/Tencent%20Video.yaml'
     path: ./Rules/Media/AsianTV/Tencent_Video
     interval: 86400
-  Youku:
-    type: http
-    behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/AsianTV/Youku.yaml'
-    path: ./Rules/Media/AsianTV/Youku
-    interval: 86400
   WeTV:
     type: http
     behavior: classical
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/AsianTV/WeTV.yaml'
     path: ./Rules/Media/AsianTV/WeTV
     interval: 86400
-  Netflix:
+  Youku:
     type: http
     behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/Netflix.yaml'
-    path: ./Rules/Media/GlobalTV/Netflix
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/AsianTV/Youku.yaml'
+    path: ./Rules/Media/AsianTV/Youku
     interval: 86400
-  Niconico:
-    type: http
-    behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/Niconico.yaml'
-    path: ./Rules/Media/GlobalTV/Niconico
-    interval: 86400
-  Spotify:
-    type: http
-    behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/Spotify.yaml'
-    path: ./Rules/Media/GlobalTV/Spotify
-    interval: 86400
-  YouTube:
-    type: http
-    behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/YouTube.yaml'
-    path: ./Rules/Media/GlobalTV/YouTube
-    interval: 86400
+
   ABC:
     type: http
     behavior: classical
@@ -343,6 +328,18 @@ rule-providers:
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/myTV%20SUPER.yaml'
     path: ./Rules/Media/GlobalTV/myTV_SUPER
     interval: 86400
+  Netflix:
+    type: http
+    behavior: classical
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/Netflix.yaml'
+    path: ./Rules/Media/GlobalTV/Netflix
+    interval: 86400
+  Niconico:
+    type: http
+    behavior: classical
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/Niconico.yaml'
+    path: ./Rules/Media/GlobalTV/Niconico
+    interval: 86400
   Pandora:
     type: http
     behavior: classical
@@ -367,29 +364,30 @@ rule-providers:
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/Soundcloud.yaml'
     path: ./Rules/Media/GlobalTV/Soundcloud
     interval: 86400
+  Spotify:
+    type: http
+    behavior: classical
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/Spotify.yaml'
+    path: ./Rules/Media/GlobalTV/Spotify
+    interval: 86400
   ViuTV:
     type: http
     behavior: classical
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/ViuTV.yaml'
     path: ./Rules/Media/GlobalTV/ViuTV
     interval: 86400
-  Telegram:
+  YouTube:
     type: http
     behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Telegram.yaml'
-    path: ./Rules/Telegram
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Media/GlobalTV/YouTube.yaml'
+    path: ./Rules/Media/GlobalTV/YouTube
     interval: 86400
+
   Steam:
     type: http
     behavior: classical
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Steam.yaml'
     path: ./Rules/Steam
-    interval: 86400
-  Speedtest:
-    type: http
-    behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Speedtest.yaml'
-    path: ./Rules/Speedtest
     interval: 86400
   PayPal:
     type: http
@@ -397,11 +395,19 @@ rule-providers:
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/PayPal.yaml'
     path: ./Rules/PayPal
     interval: 86400
-  Microsoft:
+
+  Speedtest:
     type: http
     behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Microsoft.yaml'
-    path: ./Rules/Microsoft
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Speedtest.yaml'
+    path: ./Rules/Speedtest
+    interval: 86400
+
+  Telegram:
+    type: http
+    behavior: classical
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Telegram.yaml'
+    path: ./Rules/Telegram
     interval: 86400
   PROXY:
     type: http
@@ -409,11 +415,12 @@ rule-providers:
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Proxy.yaml'
     path: ./Rules/Proxy
     interval: 86400
-  Domestic:
+
+  Microsoft:
     type: http
     behavior: classical
-    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Domestic.yaml'
-    path: ./Rules/Domestic
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Microsoft.yaml'
+    path: ./Rules/Microsoft
     interval: 86400
   Apple:
     type: http
@@ -421,11 +428,19 @@ rule-providers:
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Apple.yaml'
     path: ./Rules/Apple
     interval: 86400
+
   Scholar:
     type: http
     behavior: classical
     url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Scholar.yaml'
     path: ./Rules/Scholar
+    interval: 86400
+
+  Domestic:
+    type: http
+    behavior: classical
+    url: 'https://raw.githubusercontent.com/zzcabc/Rules/main/Rules-Github/Provider/Domestic.yaml'
+    path: ./Rules/Domestic
     interval: 86400
   Domestic IPs:
     type: http
