全规则缺少符号

--- a/Rules-Complete/Rule CDN.yaml
+++ b/Rules-Complete/Rule CDN.yaml
@@ -99,7 +99,7 @@ script:
             "Line TV": "GlobalTV",
             "myTV SUPER": "GlobalTV",
             "Netflix": "GlobalTV",
-            "Niconico": "GlobalTV"
+            "Niconico": "GlobalTV",
             "Pandora": "GlobalTV",
             "PBS": "GlobalTV",
             "Pornhub": "GlobalTV",
