--- a/Rules-Complete/Provider/Media/AsianTV/Letv.yaml
+++ b/Rules-Complete/Provider/Media/AsianTV/Letv.yaml
@@ -1,4 +1,3 @@
-payload: 
-  - DOMAIN-SUFFIX,letv.com
-  - DOMAIN-SUFFIX,letvcloud.com
+payload:  
+  # > letv
   - DOMAIN-SUFFIX,api.mob.app.letv.com
