--- a/Rules-Complete/Provider/Media/GlobalTV/BBC iPlayer.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/BBC iPlayer.yaml
@@ -1,4 +1,6 @@
-payload: 
+payload:
+  # > BBC iPlayer
+  # - User-Agent,BBCiPlayer*
   - DOMAIN-KEYWORD,bbcfmt
   - DOMAIN-SUFFIX,bbc.co
   - DOMAIN-SUFFIX,bbc.co.uk
