--- a/Rules-Complete/Provider/Media/GlobalTV/DAZN.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/DAZN.yaml
@@ -1,4 +1,6 @@
-payload: 
+payload:  
+  # > DAZN
+  # - USER-AGENT,DAZN*
   - DOMAIN-KEYWORD,livedazn
   - DOMAIN-KEYWORD,voddazn
   - DOMAIN-SUFFIX,d1sgwhnao7452x.cloudfront.net
