--- a/Rules-Complete/Provider/Media/GlobalTV/Hulu.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Hulu.yaml
@@ -1,4 +1,5 @@
-payload: 
+payload:
+  # > Hulu
   - DOMAIN-SUFFIX,cws-hulu.conviva.com
   - DOMAIN-SUFFIX,hulu.com
   - DOMAIN-SUFFIX,hulu.hb.omtrdc.net
