--- a/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Soundcloud.yaml
@@ -1,4 +1,5 @@
-payload: 
-  - DOMAIN-SUFFIX,p-cdn.us
+payload:  
+  # > SoundCloud
+  # - User-Agent,SoundCloud*
   - DOMAIN-SUFFIX,sndcdn.com
   - DOMAIN-SUFFIX,soundcloud.com
