--- a/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/YouTube.yaml
@@ -1,9 +1,12 @@
-payload: 
-  - DOMAIN-KEYWORD,googlevideo
+payload:  
+  # > Youtube
+  # - User-Agent,*youtube*
+  # - User-Agent,YouTube*
   - DOMAIN-KEYWORD,youtube
-  - DOMAIN-SUFFIX,app-measurement.com
+  - DOMAIN-SUFFIX,googlevideo.com
   - DOMAIN-SUFFIX,gvt2.com
   - DOMAIN-SUFFIX,youtu.be
+  - DOMAIN-SUFFIX,youtube.com
   - DOMAIN-SUFFIX,ytimg.com
   - DOMAIN,youtubei.googleapis.com
   - DOMAIN,yt3.ggpht.com
