--- a/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml
+++ b/Rules-Complete/Provider/Media/HMTTV/KKTV.yaml
@@ -1,4 +1,7 @@
-payload: 
+payload:  
+  # > KKTV
+  # - User-Agent,KKTV*
+  # - User-Agent,com.kktv*
   - DOMAIN-SUFFIX,kktv.com.tw
   - DOMAIN-SUFFIX,kktv.me
   - DOMAIN,kktv-theater.kk.stream
