--- a/Rules-Complete/Provider/Media/JPTV/Hulu Japan.yaml
+++ b/Rules-Complete/Provider/Media/JPTV/Hulu Japan.yaml
@@ -1,4 +1,5 @@
-payload: 
+payload:  
+  # > Hulu(フールー)
   - DOMAIN-SUFFIX,happyon.jp
   - DOMAIN-SUFFIX,hulu.jp
   - DOMAIN-SUFFIX,prod.hjholdings.tv
