--- a/Rules-Complete/Provider/PayPal.yaml
+++ b/Rules-Complete/Provider/PayPal.yaml
@@ -1,4 +1,6 @@
-payload: 
+payload:  
+  # > PayPal
+  # - User-Agent,PayPal*
   - DOMAIN-KEYWORD,paypal
   - DOMAIN-SUFFIX,paypal.com
   - DOMAIN-SUFFIX,paypalobjects.com
