--- a/Rules-Complete/Provider/Apple.yaml
+++ b/Rules-Complete/Provider/Apple.yaml
@@ -1,21 +1,17 @@
-payload: 
+payload:
+  # > Apple API
   - DOMAIN-SUFFIX,aaplimg.com
-  - DOMAIN-SUFFIX,akadns.net
   - DOMAIN-SUFFIX,apple-cloudkit.com
   - DOMAIN-SUFFIX,apple-mapkit.com
   - DOMAIN-SUFFIX,apple.co
   - DOMAIN-SUFFIX,apple.com
-  - DOMAIN-SUFFIX,apple.news
   - DOMAIN-SUFFIX,appsto.re
-  - DOMAIN-SUFFIX,appstore.com
   - DOMAIN-SUFFIX,cdn-apple.com
-  - DOMAIN-SUFFIX,crashlytics.com
   - DOMAIN-SUFFIX,icloud-content.com
   - DOMAIN-SUFFIX,icloud.com
   - DOMAIN-SUFFIX,itunes.com
   - DOMAIN-SUFFIX,me.com
   - DOMAIN-SUFFIX,mzstatic.com
-  - DOMAIN,apple.comscoreresearch.com
   - IP-CIDR,139.178.128.0/18,no-resolve
   - IP-CIDR,144.178.0.0/19,no-resolve
   - IP-CIDR,144.178.36.0/22,no-resolve
@@ -26,7 +22,27 @@ payload:
   - IP-CIDR,205.180.175.0/24,no-resolve
   - IP-CIDR,63.92.224.0/19,no-resolve
   - IP-CIDR,65.199.22.0/23,no-resolve
+
+  # > Apple News
+  - DOMAIN-SUFFIX,apple.news
+
+  # > Apple Maps
   - PROCESS-NAME,com.apple.geod
 
-
-
+  # > Apple CDN
+  - PROCESS-NAME,storedownloadd
+  # - User-Agent,com.apple.appstored*
+  - DOMAIN-SUFFIX,ls.apple.com
+  - DOMAIN-SUFFIX,mzstatic.com
+  - DOMAIN,aod.itunes.apple.com
+  - DOMAIN,api.smoot.apple.cn
+  - DOMAIN,appldnld.apple.com
+  - DOMAIN,apptrailers.itunes.apple.com
+  - DOMAIN,gs-loc-cn.apple.com
+  - DOMAIN,iosapps.itunes.apple.com
+  - DOMAIN,music.apple.com
+  - DOMAIN,mvod.itunes.apple.com
+  - DOMAIN,osxapps.itunes.apple.com
+  - DOMAIN,supportdownload.apple.com
+  - DOMAIN,swcdn.apple.com
+  - DOMAIN,updates-http.cdn-apple.com
