--- a/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Amazon.yaml
@@ -1,10 +1,31 @@
-payload: 
+payload:
+  # > Amazon Prime Video
+  # - User-Agent,InstantVideo.US*
+  # - User-Agent,Prime%20Video*
   - DOMAIN-SUFFIX,aiv-cdn.net
+  - DOMAIN-SUFFIX,amazon.co.jp
+  - DOMAIN-SUFFIX,amazon.com
   - DOMAIN-SUFFIX,amazonaws.co.uk
   - DOMAIN-SUFFIX,amazonaws.com
   - DOMAIN-SUFFIX,amazonvideo.com
+  - DOMAIN-SUFFIX,amazon.co
   - DOMAIN-SUFFIX,llnwd.net
   - DOMAIN-SUFFIX,media-amazon.com
   - DOMAIN-SUFFIX,primevideo.com
   - DOMAIN,atv-ps.amazon.com
   - DOMAIN,fls-na.amazon.com
+  - IP-CIDR,13.32.0.0/15,no-resolve
+  - IP-CIDR,13.35.0.0/17,no-resolve
+  - IP-CIDR,18.184.0.0/15,no-resolve
+  - IP-CIDR,18.194.0.0/15,no-resolve
+  - IP-CIDR,18.208.0.0/13,no-resolve
+  - IP-CIDR,18.232.0.0/14,no-resolve
+  - IP-CIDR,52.200.0.0/13,no-resolve
+  - IP-CIDR,52.58.0.0/15,no-resolve
+  - IP-CIDR,52.74.0.0/16,no-resolve
+  - IP-CIDR,52.77.0.0/16,no-resolve
+  - IP-CIDR,52.84.0.0/15,no-resolve
+  - IP-CIDR,54.156.0.0/14,no-resolve
+  - IP-CIDR,54.226.0.0/15,no-resolve
+  - IP-CIDR,54.230.156.0/22,no-resolve
+  - IP-CIDR,54.93.0.0/16,no-resolve
