--- a/Rules-Complete/Provider/Media/GlobalTV/Apple TV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Apple TV.yaml
@@ -1,4 +1,5 @@
-payload: 
+payload:  
+  # > Apple TV
   - DOMAIN-SUFFIX,tv.apple.com
   - DOMAIN,np-edge.itunes.apple.com
   - DOMAIN,play-edge.itunes.apple.com
