--- a/Rules-Complete/Provider/Media/GlobalTV/Discovery Plus.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Discovery Plus.yaml
@@ -1,4 +1,6 @@
-payload: 
+payload:  
+  # > Discovery Plus
+  # - User-Agent,DPlus*
   - DOMAIN-SUFFIX,content-ause1-ur-discovery1.uplynk.com
   - DOMAIN-SUFFIX,disco-api.com
   - DOMAIN-SUFFIX,discoveryplus.com
