--- a/Rules-Complete/Provider/Media/GlobalTV/Disney Plus.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Disney Plus.yaml
@@ -1,5 +1,9 @@
-payload: 
+payload:  
+  # > Disney Plus
+  # - User-Agent,Disney*
+  # - User-Agent,Disney+*
   - DOMAIN-SUFFIX,adobedtm.com
+  - DOMAIN-SUFFIX,bam.nr-data.net
   - DOMAIN-SUFFIX,bam.nr-date.net
   - DOMAIN-SUFFIX,bamgrid.com
   - DOMAIN-SUFFIX,braze.com
@@ -14,8 +18,8 @@ payload:
   - DOMAIN-SUFFIX,disneyplus.bn5x.net
   - DOMAIN-SUFFIX,disneyplus.com
   - DOMAIN-SUFFIX,disneyplus.com.ssl.sc.omtrdc.net
+  - DOMAIN-SUFFIX,disneystreaming.com
   - DOMAIN-SUFFIX,dssott.com
   - DOMAIN-SUFFIX,execute-api.us-east-1.amazonaws.com
   - DOMAIN-SUFFIX,js-agent.newrelic.com
-  - DOMAIN,cdn.unid.go.com
-  - DOMAIN,global.edge.bamgrid.com
+  - DOMAIN,cdn.registerdisney.go.com
