--- a/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/JOOX.yaml
@@ -1,3 +1,5 @@
-payload: 
-  - DOMAIN-KEYWORD,jooxweb-api
+payload:  
+  # > JOOX
+  # - User-Agent,WeMusic*
+  # - User-Agent,JOOX*
   - DOMAIN-SUFFIX,joox.com
