--- a/Rules-Complete/Provider/Media/GlobalTV/Line TV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Line TV.yaml
@@ -1,4 +1,6 @@
-payload: 
+payload:  
+  # > Line TV
+  # - User-Agent,LINE*
   - DOMAIN-SUFFIX,d3c7rimkq79yfu.cloudfront.net
   - DOMAIN-SUFFIX,linetv.tw
   - DOMAIN-SUFFIX,profile.line-scdn.net
