--- a/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/Spotify.yaml
@@ -1,4 +1,8 @@
-payload: 
+payload:
+  # > Spotify
+  # - User-Agent,Spotify*
+  - DOMAIN-KEYWORD,-spotify-com
+  - DOMAIN-KEYWORD,spotify.com
   - DOMAIN-SUFFIX,pscdn.co
   - DOMAIN-SUFFIX,scdn.co
   - DOMAIN-SUFFIX,spoti.fi
