--- a/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml
+++ b/Rules-Complete/Provider/Media/GlobalTV/ViuTV.yaml
@@ -1,4 +1,6 @@
-payload: 
+payload:
+  # > ViuTV
+  # - User-Agent,ViuTV*
   - DOMAIN-SUFFIX,bootstrapcdn.com
   - DOMAIN-SUFFIX,cloudfront.net
   - DOMAIN-SUFFIX,cognito-identity.us-east-1.amazonaws.com
