--- a/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml
+++ b/Rules-Complete/Provider/Media/HMTTV/Bahamut.yaml
@@ -1,4 +1,6 @@
-payload: 
+payload:
+  # > Bahamut
+  # - User-Agent,Anime*
   - DOMAIN-SUFFIX,bahamut.com.tw
   - DOMAIN-SUFFIX,gamer.com.tw
   - DOMAIN-SUFFIX,hinet.net
