--- a/Rules-Complete/Provider/Special.yaml
+++ b/Rules-Complete/Provider/Special.yaml
@@ -1,68 +1,34 @@
-payload: 
-  - DOMAIN-KEYWORD,announce
-  - DOMAIN-KEYWORD,epicgames
-  - DOMAIN-KEYWORD,mtalk.google.com
-  - DOMAIN-KEYWORD,torrent
-  - DOMAIN-SUFFIX,awesome-hd.me
-  - DOMAIN-SUFFIX,broadcasthe.net
-  - DOMAIN-SUFFIX,chdbits.co
-  - DOMAIN-SUFFIX,classix-unlimited.co.uk
-  - DOMAIN-SUFFIX,dl.google.com
+payload:
+  # > Dler Cloud
   - DOMAIN-SUFFIX,dler.cloud
-  - DOMAIN-SUFFIX,empornium.me
-  - DOMAIN-SUFFIX,gazellegames.net
-  - DOMAIN-SUFFIX,hdchina.org
-  - DOMAIN-SUFFIX,hdsky.me
-  - DOMAIN-SUFFIX,icetorrent.org
-  - DOMAIN-SUFFIX,jpopsuki.eu
-  - DOMAIN-SUFFIX,keepfrds.com
-  - DOMAIN-SUFFIX,ls.apple.com
-  - DOMAIN-SUFFIX,m-team.cc
-  - DOMAIN-SUFFIX,madsrevolution.net
-  - DOMAIN-SUFFIX,msftconnecttest.com
-  - DOMAIN-SUFFIX,mzstatic.com
-  - DOMAIN-SUFFIX,nanyangpt.com
-  - DOMAIN-SUFFIX,ncore.cc
-  - DOMAIN-SUFFIX,open.cd
-  - DOMAIN-SUFFIX,ourbits.club
-  - DOMAIN-SUFFIX,passthepopcorn.me
-  - DOMAIN-SUFFIX,pinyuncloud.com
-  - DOMAIN-SUFFIX,privatehd.to
-  - DOMAIN-SUFFIX,redacted.ch
-  - DOMAIN-SUFFIX,smtp
-  - DOMAIN-SUFFIX,springsunday.net
-  - DOMAIN-SUFFIX,steamcontent.com
-  - DOMAIN-SUFFIX,tesla-cdn.thron.cn
+
+  # > Proxy plugin
+  - PROCESS-NAME,v2ray
+  - PROCESS-NAME,ss-local
+
+  # > Tesla
   - DOMAIN-SUFFIX,tesla.cn
-  - DOMAIN-SUFFIX,tjupt.org
-  - DOMAIN-SUFFIX,totheglory.im
-  - DOMAIN-SUFFIX,windowsupdate.com
+  - DOMAIN-SUFFIX,tesla-cdn.thron.cn
+
+  # > UUBooster
+  - PROCESS-NAME,UUBooster
+
+  # > Xunlei
+  # - User-Agent,%E8%BF%85%E9%9B%B7
   - DOMAIN-SUFFIX,xunlei.com
-  - DOMAIN,aod.itunes.apple.com
-  - DOMAIN,api.smoot.apple.cn
-  - DOMAIN,appldnld.apple.com
-  - DOMAIN,apptrailers.itunes.apple.com
-  - DOMAIN,gs-loc-cn.apple.com
-  - DOMAIN,iosapps.itunes.apple.com
-  - DOMAIN,music.apple.com
-  - DOMAIN,mvod.itunes.apple.com
-  - DOMAIN,osxapps.itunes.apple.com
-  - DOMAIN,safebrowsing.googleapis.com
-  - DOMAIN,supportdownload.apple.com
-  - DOMAIN,swcdn.apple.com
-  - DOMAIN,updates-http.cdn-apple.com
-  - PROCESS-NAME,aria2c
+
+  # > Download
   - PROCESS-NAME,aria2c.exe
   - PROCESS-NAME,BitComet.exe
-  - PROCESS-NAME,fdm
   - PROCESS-NAME,fdm.exe
+  # - PROCESS-NAME,IDMan.exe
+  - PROCESS-NAME,aria2c
+  - PROCESS-NAME,fdm
   - PROCESS-NAME,Folx
   - PROCESS-NAME,NetTransport
   - PROCESS-NAME,NetTransport.exe
   - PROCESS-NAME,qbittorrent
   - PROCESS-NAME,qbittorrent.exe
-  - PROCESS-NAME,ss-local
-  - PROCESS-NAME,storedownloadd
   - PROCESS-NAME,Thunder
   - PROCESS-NAME,Thunder.exe
   - PROCESS-NAME,ThunderVIP.exe
@@ -71,8 +37,35 @@ payload:
   - PROCESS-NAME,transmission-qt.exe
   - PROCESS-NAME,uTorrent
   - PROCESS-NAME,uTorrent.exe
-  - PROCESS-NAME,UUBooster
-  - PROCESS-NAME,v2ray
   - PROCESS-NAME,WebTorrent
   - PROCESS-NAME,WebTorrent Helper
   - PROCESS-NAME,WebTorrent.exe
+
+  # > Private Tracker
+  - DOMAIN-KEYWORD,announce
+  - DOMAIN-KEYWORD,torrent
+  - DOMAIN-SUFFIX,awesome-hd.me
+  - DOMAIN-SUFFIX,broadcasthe.net
+  - DOMAIN-SUFFIX,chdbits.co
+  - DOMAIN-SUFFIX,classix-unlimited.co.uk
+  - DOMAIN-SUFFIX,empornium.me
+  - DOMAIN-SUFFIX,gazellegames.net
+  - DOMAIN-SUFFIX,hdchina.org
+  - DOMAIN-SUFFIX,hdsky.me
+  - DOMAIN-SUFFIX,icetorrent.org
+  - DOMAIN-SUFFIX,jpopsuki.eu
+  - DOMAIN-SUFFIX,keepfrds.com
+  - DOMAIN-SUFFIX,m-team.cc
+  - DOMAIN-SUFFIX,madsrevolution.net
+  - DOMAIN-SUFFIX,nanyangpt.com
+  - DOMAIN-SUFFIX,ncore.cc
+  - DOMAIN-SUFFIX,open.cd
+  - DOMAIN-SUFFIX,ourbits.club
+  - DOMAIN-SUFFIX,passthepopcorn.me
+  - DOMAIN-SUFFIX,privatehd.to
+  - DOMAIN-SUFFIX,redacted.ch
+  - DOMAIN-SUFFIX,smtp
+  - DOMAIN-SUFFIX,springsunday.net
+  - DOMAIN-SUFFIX,tjupt.org
+  - DOMAIN-SUFFIX,totheglory.im
+  # - URL-REGEX,(Subject|HELO|SMTP)
