--- a/Rules-Complete/Provider/Speedtest.yaml
+++ b/Rules-Complete/Provider/Speedtest.yaml
@@ -1,5 +1,11 @@
-payload: 
-  - DOMAIN-KEYWORD,speedtest
+payload:
+  # > Fast
   - DOMAIN-SUFFIX,fast.com
+
+  # > Speedtest by Ookla
+  # - User-Agent,SpeedTest*
+  - DOMAIN-KEYWORD,speedtest
   - DOMAIN-SUFFIX,ooklaserver.net
+
+  # > Speed Test by Cloudflare
   - DOMAIN-SUFFIX,speed.cloudflare.com
